...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_user_details_img"
            app:rippleColor="#000000"
            app:srcCompat="@drawable/ic_favorite_border_24dp" />

        <TextView
            android:id="@+id/activity_user_details_name1_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="28dp"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_user_details_about_me_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
...
